# sd1-scm

./: .gitignore  CMakeLists.txt  README.md  notas.txt  tareas.txt
client/: broker.cpp  main.cpp
common/: constants.h  message.h  ringmessage.h
common/ipc/: msg_queue.c  msg_queue.h  resources.h  semaphore.c  semaphore.h  shm.c  shm.h  sig.c  sig.h  socket.c  socket.h
common/ipc/arch/: semaphore.c  shm.c
common/log/: log.c  log.h
doc/: doc-interna.txt  notas.txt  scm-v2.txt  tareas.txt  v1-doc-interna.txt
server/: ring_node.cpp  server.cpp  worker.cpp
